--- a/css/maruti-style.css
+++ b/css/maruti-style.css
@@ -17,7 +17,25 @@ select, textarea, input[type="text"], input[type="password"], input[type="dateti
 .btn, textarea, input[type="text"], input[type="password"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"], .uneditable-input{ box-shadow:none;}
 .progress, .progress-success .bar, .progress .bar-success, .progress-warning .bar, .progress .bar-warning, .progress-danger .bar, .progress .bar-danger, .progress-info .bar, .progress .bar-info, .btn, .btn-primary{background-image:none;}
 
-
+/*Addon Card Layout*/
+#plane{
+	width: 23.076923076923077%;
+	float: left;
+	clear: none;
+	margin-right: 2.564102564102564%;
+	cursor: pointer;
+	border-radius: 5px;
+	overflow: hidden;
+	max-width:450px;
+	min-width: 345px;
+}
+#plane:hover{
+	background: #eee;
+}
+#plane .widget-title h5{
+	color: #fff !important;
+	text-shadow: 0px 1px 0px rgba(0,0,0,0.3);
+}
 /* Header */
 #header {
     height: 62px;
@@ -1035,7 +1053,12 @@ span.icon .checker {
 	margin-top: -5px;
 	margin-right: 0;
 }
-
+.dataTables_info{
+position: absolute;
+left: 170px;
+bottom: 14px;
+text-align: left;
+}
 .dataTables_length {
     color: #878787;
     margin: 7px 5px 0;
@@ -1270,6 +1293,29 @@ form {
 .bs-docs-tooltip-examples li {    display: inline;    padding: 0 10px; list-style:none; position:relative;}
 /* Responsive design */
 @media (max-width: 480px) {
+	#detail{
+position: fixed;
+top: 20px;
+height: 95%;
+overflow: auto;
+z-index: 999;
+max-width: 345px;
+box-shadow: 0px 0px 50px rgba(0,0,0,0.8);
+
+	}
+	#detail .widget-box{
+		margin:0;
+	}
+	#detail .widget-title .buttons > .btn{
+		width: auto;
+	}
+	#detail .widget-title{
+		position: fixed;
+		width: 100%;
+	}
+	#detail .widget-content{
+		margin-top:36px;
+	}
 	#header h1 {
 		top: 5px;
 		margin: 3px auto;
@@ -1302,8 +1348,7 @@ form {
 	}
 	#content-header {
 		margin-top: 0;
-		
-		text-align: center;
+		text-align: left;
 	}
 	#content-header h1, #content-header .btn-group {
 		float: none;
@@ -1317,10 +1362,8 @@ form {
 		width: 100%;
 	}
 	#content-header .btn-group {
-		margin-top: 70px;
-		margin-bottom: 0;
-		margin-right: 0;
 		left: 30%;
+		left: 200px !important;
 	}
 	
 #sidebar { float: none; width: 100% !important;	display:block; position:relative; top:0px;}
@@ -1364,6 +1407,30 @@ form {
 }
 
 @media (min-width: 481px) and (max-width: 970px) {
+	#detail{
+position: fixed;
+top: 20px;
+right: 20px;
+height: 95%;
+overflow: auto;
+z-index: 999;
+max-width: 345px;
+box-shadow: 0px 0px 50px rgba(0,0,0,0.8);
+
+	}
+	#detail .widget-box{
+		margin:0;
+	}
+	#detail .widget-title .buttons {
+		float: left;
+	}
+	#detail .widget-title{
+		position: fixed;
+		width: 100%;
+	}
+	#detail .widget-content{
+		margin-top:36px;
+	}
 	body{ background:#49CCED}
 	#header h1 {
 		top:20px;
