--- a/css/maruti-login.css
+++ b/css/maruti-login.css
@@ -1,9 +1,13 @@
 html, body {    width: 100%;    height: 100%;}
-body {	background-color:#2E363F;    padding: 0;    margin-top:10%;}
+body {	background-color:#eee;    padding: 0;    margin-top:10%;}
 #logo, #loginbox {    width: 32%;    margin-left: auto;    margin-right: auto;    position: relative;}
 #logo img {  margin: 0 auto;    display: block;}
 #loginbox { overflow: hidden !important;    text-align: left;    position: relative; }
-#loginbox form{	width:100%; background:#fff;	position:relative;	top:0;	left:0; }
+#loginbox form{	border: 1px solid #ddd;width:100%; background:#fff;	position:relative;	top:0;	left:0; -webkit-box-shadow: 0 0 2px rgba(0,0,0,0.3),0 3px 5px rgba(0,0,0,0.2);
+-moz-box-shadow: 0 0 2px rgba(0,0,0,0.3),0 3px 5px rgba(0,0,0,0.2);
+-ms-box-shadow: 0 0 2px rgba(0,0,0,0.3),0 3px 5px rgba(0,0,0,0.2);
+-o-box-shadow: 0 0 2px rgba(0,0,0,0.3),0 3px 5px rgba(0,0,0,0.2);
+box-shadow: 0 0 2px rgba(0,0,0,0.3),0 3px 5px rgba(0,0,0,0.2);}
 #loginbox .form-actions {	padding: 14px 20px 15px;}
 #loginbox .form-actions .pull-left { margin-top:0px;}
 #loginbox form#loginform {	z-index: 200; display:block;}
@@ -15,7 +19,44 @@ body {	background-color:#2E363F;    padding: 0;    margin-top:10%;}
 #loginbox .controls{ padding:0 20px;}
 #loginbox .control-group{ padding:20px 0; border-bottom:1px solid #f6f6f6; margin-bottom:0px;}
 .form-vertical, .form-actions {    margin-bottom: 0;}
-#loginbox .normal_text{ padding:15px 10px; text-align:center; font-size:14px; line-height:20px; background:#49CCED; color:#fff; }
+#loginbox .normal_text{
+padding:15px;
+color:#fff;
+text-align:center;
+position: relative;
+text-shadow: 0px 2px 1px rgba(0,0,0,0.42);
+-webkit-border-top-left-radius: 4px;
+-moz-border-top-left-radius: 4px;
+-ms-border-top-left-radius: 4px;
+-o-border-top-left-radius: 4px;
+border-top-left-radius: 4px;
+-webkit-border-top-right-radius: 4px;
+-moz-border-top-right-radius: 4px;
+-ms-border-top-right-radius: 4px;
+-o-border-top-right-radius: 4px;
+border-top-right-radius: 4px;
+-webkit-box-shadow: inset 0 1px 0 #75acea;
+-moz-box-shadow: inset 0 1px 0 #75acea;
+-ms-box-shadow: inset 0 1px 0 #75acea;
+-o-box-shadow: inset 0 1px 0 #75acea;
+box-shadow: inset 0 1px 0 #75acea;
+background: #2f7ed6;
+background: -webkit-linear-gradient(#60a0e7,#3a7ac1);
+background: -moz-linear-gradient(#60a0e7,#3a7ac1);
+background: -ms-linear-gradient(#60a0e7,#3a7ac1);
+background: -o-linear-gradient(#60a0e7,#3a7ac1);
+background: linear-gradient(#60a0e7,#3a7ac1);
+background: #2f7ed6;
+background: -webkit-linear-gradient(#9dcde9,#74b9e0 2px,#2490ce);
+background: -moz-linear-gradient(#9dcde9,#74b9e0 2px,#2490ce);
+background: -ms-linear-gradient(#9dcde9,#74b9e0 2px,#2490ce);
+background: -o-linear-gradient(#9dcde9,#74b9e0 2px,#2490ce);
+background: linear-gradient(#9dcde9,#74b9e0 2px,#2490ce);
+-webkit-box-shadow: inset 0 -1px 0 rgba(0,0,0,0.05);
+-moz-box-shadow: inset 0 -1px 0 rgba(0,0,0,0.05);
+-ms-box-shadow: inset 0 -1px 0 rgba(0,0,0,0.05);
+-o-box-shadow: inset 0 -1px 0 rgba(0,0,0,0.05);
+box-shadow: inset 0 -1px 0 rgba(0,0,0,0.05); }
 @media (max-width: 480px){
 #logo { width: 40%; }
 #loginbox{ width:90%}
