--- a/css/maruti-style.css
+++ b/css/maruti-style.css
@@ -115,10 +115,10 @@ background: linear-gradient(#9dcde9,#74b9e0 2px,#2490ce);}
 #sidebar > ul > li:hover {
 background: #1b7cc0;} 
 #sidebar > ul > li:hover a{ background:none;}
-#sidebar > ul li ul { margin:0px; padding:0px; display:none; z-index:999;  position:absolute; left:0px; top:40px;  background:#41bedd; min-width:200px;} 
+#sidebar > ul li ul { margin:0px; padding:0px; display:none; z-index:999;  position:absolute; left:0px; top:40px;  background:#4ba5da; min-width:200px;} 
 #sidebar > ul li ul li { list-style-type:none; margin:0px; font-size:12px;line-height:30px;  } 
 #sidebar > ul li ul li a { display:block; padding:5px 10px; color:#fff; text-decoration:none; font-weight:bold; } 
-#sidebar > ul li ul li:hover a{ background-color:#36a8c5;} 
+#sidebar > ul li ul li:hover a{ background-color:#3a8ebf;} 
 #sidebar > ul li span { cursor:pointer; margin:0px 2px 0 5px;  color:#fff; font-size:12px; text-shadow: 0px 1px 1px rgba(0,0,0,0.55);}
 #sidebar > ul li a i{ background-image: url("../img/glyphicons-halflings-white.png");     margin-top:4px;    vertical-align: top;}
 #my_menu_input{ display:none;}
